# smv

./: .gitignore  README.md  meson.build
src/: MainApplication.cpp  hpp_hello_triangle.cpp  log.cpp  simplemusicvisualizer.cpp
src/include/: hpp_hello_triangle.h  log.h
